# serializer version: 1
# name: test_doc_ok[doc_agg][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> AGGREGATE COUNT(*) AS num_items, SUM(sales) AS total_sales;
  '''
# ---
# name: test_doc_ok[doc_agg][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	COUNT
                function_args
                  star_arg
              as_alias
                ident	num_items
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
  
  '''
# ---
# name: test_doc_ok[doc_agg_group_and_order_by][sql]
  '''
  FROM Produce
  |> AGGREGATE SUM(sales) AS total_sales
     GROUP AND ORDER BY category, item DESC;
  '''
# ---
# name: test_doc_ok[doc_agg_group_and_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            ident	category
          grouping_item
            ident	item
            order_by_item_sort	DESC
  
  '''
# ---
# name: test_doc_ok[doc_agg_group_by][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> AGGREGATE COUNT(*) AS num_items, SUM(sales) AS total_sales
     GROUP BY item;
  '''
# ---
# name: test_doc_ok[doc_agg_group_by][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	COUNT
                function_args
                  star_arg
              as_alias
                ident	num_items
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
      group_by
        grouping_items
          grouping_item
            ident	item
  
  '''
# ---
# name: test_doc_ok[doc_agg_group_implicit_order_by][sql]
  '''
  FROM Produce
  |> AGGREGATE SUM(sales) AS total_sales ASC
     GROUP BY item, category DESC;
  '''
# ---
# name: test_doc_ok[doc_agg_group_implicit_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
          order_by_item_sort	ASC
      group_by
        grouping_items
          grouping_item
            ident	item
          grouping_item
            ident	category
            order_by_item_sort	DESC
  
  '''
# ---
# name: test_doc_ok[doc_agg_group_then_order_by][sql]
  '''
  FROM Produce
  |> AGGREGATE SUM(sales) AS total_sales
     GROUP BY category, item
  |> ORDER BY category, item DESC;
  '''
# ---
# name: test_doc_ok[doc_agg_group_then_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
      group_by
        grouping_items
          grouping_item
            ident	category
          grouping_item
            ident	item
    pipe_order_by
      order_by_items
        order_by_item
          ident	category
        order_by_item
          ident	item
          order_by_item_sort	DESC
  
  '''
# ---
# name: test_doc_ok[doc_as][sql]
  '''
  (
      SELECT "000123" AS id, "apples" AS item, 2 AS sales
      |> UNION ALL (SELECT "000456" AS id, "bananas" AS item, 5 AS sales)
  ) AS sales_table
  |> AGGREGATE SUM(sales) AS total_sales GROUP BY id, item
  -- The sales_table alias is now out of scope. We must introduce a new one.
  |> AS t1
  |> JOIN (SELECT 456 AS id, "yellow" AS color) AS t2
     ON CAST(t1.id AS INT64) = t2.id
  |> SELECT t2.id, total_sales, color;
  '''
# ---
# name: test_doc_ok[doc_as][tree]
  '''
  query_expr
    query_expr
      select
        select_list
          select_expr
            string_literal	"000123"
            as_alias
              ident	id
          select_expr
            string_literal	"apples"
            as_alias
              ident	item
          select_expr
            integer_literal	2
            as_alias
              ident	sales
      pipe_set_operation
        set_operation
          set_operation_metadata
            set_operation_kind	UNION
            set_operation_mode	ALL
          set_operation_list
            subquery
              query_expr
                select
                  select_list
                    select_expr
                      string_literal	"000456"
                      as_alias
                        ident	id
                    select_expr
                      string_literal	"bananas"
                      as_alias
                        ident	item
                    select_expr
                      integer_literal	5
                      as_alias
                        ident	sales
    as_alias_as_required
      ident	sales_table
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
      group_by
        grouping_items
          grouping_item
            ident	id
          grouping_item
            ident	item
    pipe_as
      ident	t1
    pipe_join
      from_item_subquery
        subquery
          query_expr
            select
              select_list
                select_expr
                  integer_literal	456
                  as_alias
                    ident	id
                select_expr
                  string_literal	"yellow"
                  as_alias
                    ident	color
        as_alias
          ident	t2
      on_or_using_clause
        on_clause
          eq_expr
            cast_expr_kind_cast
              cast_expr_target
                path_expression
                  ident	t1
                  ident	id
                ident	INT64
            path_expression
              ident	t2
              ident	id
    pipe_select
      select_list
        select_expr
          path_expression
            ident	t2
            ident	id
        select_expr
          ident	total_sales
        select_expr
          ident	color
  
  '''
# ---
# name: test_doc_ok[doc_call][sql]
  '''
  FROM input_table
  |> CALL tvf1(arg1)
  |> CALL tvf2(arg2, arg3);
  '''
# ---
# name: test_doc_ok[doc_call][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	input_table
    pipe_call
      function_call_expr
        function_name
          ident	tvf1
        function_args
          pos_arg
            ident	arg1
    pipe_call
      function_call_expr
        function_name
          ident	tvf2
        function_args
          pos_arg
            ident	arg2
          pos_arg
            ident	arg3
  
  '''
# ---
# name: test_doc_ok[doc_drop][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales, 'fruit' AS category
  |> DROP sales, category;
  '''
# ---
# name: test_doc_ok[doc_drop][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
        select_expr
          string_literal	'fruit'
          as_alias
            ident	category
    pipe_drop
      drop_list
        drop_item
          ident	sales
        drop_item
          ident	category
  
  '''
# ---
# name: test_doc_ok[doc_drop_nested][sql]
  '''
  FROM (SELECT 1 AS x, 2 AS y) AS t
  |> DROP x
  |> SELECT t.x AS original_x, y;
  '''
# ---
# name: test_doc_ok[doc_drop_nested][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	x
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	y
          as_alias
            ident	t
    pipe_drop
      drop_list
        drop_item
          ident	x
    pipe_select
      select_list
        select_expr
          path_expression
            ident	t
            ident	x
          as_alias
            ident	original_x
        select_expr
          ident	y
  
  '''
# ---
# name: test_doc_ok[doc_except_distinct_subquery][sql]
  '''
  SELECT * FROM UNNEST(ARRAY<INT64>[1, 2, 3, 3, 4]) AS number
  |> EXCEPT DISTINCT
  (
    SELECT * FROM UNNEST(ARRAY<INT64>[1, 2]) AS number
    |> EXCEPT DISTINCT
        (SELECT * FROM UNNEST(ARRAY<INT64>[1, 4]) AS number)
  );
  '''
# ---
# name: test_doc_ok[doc_except_distinct_subquery][tree]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              array_literal_prefix
                array_type
                  type
                    type_name
                      path_expression
                        ident	INT64
              integer_literal	1
              integer_literal	2
              integer_literal	3
              integer_literal	3
              integer_literal	4
          as_alias
            ident	number
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	DISTINCT
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_star
                from_clause
                  from_item_unnest
                    unnest_expr
                      array_literal
                        array_literal_prefix
                          array_type
                            type
                              type_name
                                path_expression
                                  ident	INT64
                        integer_literal	1
                        integer_literal	2
                    as_alias
                      ident	number
              pipe_set_operation
                set_operation
                  set_operation_metadata
                    set_operation_kind	EXCEPT
                    set_operation_mode	DISTINCT
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            select_star
                          from_clause
                            from_item_unnest
                              unnest_expr
                                array_literal
                                  array_literal_prefix
                                    array_type
                                      type
                                        type_name
                                          path_expression
                                            ident	INT64
                                  integer_literal	1
                                  integer_literal	4
                              as_alias
                                ident	number
  
  '''
# ---
# name: test_doc_ok[doc_extend][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> EXTEND item IN ('carrots', 'oranges') AS is_orange;
  '''
# ---
# name: test_doc_ok[doc_extend][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            in_expr
              ident	item
              parenthesized_list
                string_literal	'carrots'
                string_literal	'oranges'
            as_alias
              ident	is_orange
  
  '''
# ---
# name: test_doc_ok[doc_extend_named_window][sql]
  '''
  FROM Produce
  |> EXTEND SUM(sales) OVER item_window AS category_total
     WINDOW item_window AS (PARTITION BY category);
  '''
# ---
# name: test_doc_ok[doc_extend_named_window][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	sales
              named_window
                ident	item_window
            as_alias
              ident	category_total
      window_clause
        window_item
          ident	item_window
          window_expr
            window_spec
              window_partition_by
                ident	category
  
  '''
# ---
# name: test_doc_ok[doc_extend_window][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> EXTEND SUM(sales) OVER() AS total_sales;
  '''
# ---
# name: test_doc_ok[doc_extend_window][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	sales
              window_expr
                window_spec
            as_alias
              ident	total_sales
  
  '''
# ---
# name: test_doc_ok[doc_from][sql]
  '''
  FROM Produce AS p1
  |> JOIN Produce AS p2 USING (item)
  |> WHERE item = 'bananas'
  |> SELECT p1.item, p2.sales;
  '''
# ---
# name: test_doc_ok[doc_from][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
          as_alias
            ident	p1
    pipe_join
      from_item_table
        path_expression
          ident	Produce
        as_alias
          ident	p2
      on_or_using_clause
        using_clause
          ident	item
    pipe_where
      eq_expr
        ident	item
        string_literal	'bananas'
    pipe_select
      select_list
        select_expr
          path_expression
            ident	p1
            ident	item
        select_expr
          path_expression
            ident	p2
            ident	sales
  
  '''
# ---
# name: test_doc_ok[doc_intersect_distinct][sql]
  '''
  SELECT 1 AS one_digit, 10 AS two_digit
  |> UNION ALL (SELECT 2, 20)
  |> UNION ALL (SELECT 3, 30)
  |> INTERSECT DISTINCT BY NAME
      (SELECT 10 AS two_digit, 1 AS one_digit);
  '''
# ---
# name: test_doc_ok[doc_intersect_distinct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	one_digit
        select_expr
          integer_literal	10
          as_alias
            ident	two_digit
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
                  select_expr
                    integer_literal	20
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	3
                  select_expr
                    integer_literal	30
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	INTERSECT
          set_operation_mode	DISTINCT
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	10
                    as_alias
                      ident	two_digit
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	one_digit
  
  '''
# ---
# name: test_doc_ok[doc_join][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> AS produce_sales
  |> LEFT JOIN
       (
         SELECT "apples" AS item, 123 AS id
       ) AS produce_data
     ON produce_sales.item = produce_data.item
  |> SELECT produce_sales.item, sales, id;
  '''
# ---
# name: test_doc_ok[doc_join][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_as
      ident	produce_sales
    pipe_join
      join_criteria	LEFT
      from_item_subquery
        subquery
          query_expr
            select
              select_list
                select_expr
                  string_literal	"apples"
                  as_alias
                    ident	item
                select_expr
                  integer_literal	123
                  as_alias
                    ident	id
        as_alias
          ident	produce_data
      on_or_using_clause
        on_clause
          eq_expr
            path_expression
              ident	produce_sales
              ident	item
            path_expression
              ident	produce_data
              ident	item
    pipe_select
      select_list
        select_expr
          path_expression
            ident	produce_sales
            ident	item
        select_expr
          ident	sales
        select_expr
          ident	id
  
  '''
# ---
# name: test_doc_ok[doc_limit][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> ORDER BY item
  |> LIMIT 1;
  '''
# ---
# name: test_doc_ok[doc_limit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_order_by
      order_by_items
        order_by_item
          ident	item
    pipe_limit
      limit_expr
        integer_literal	1
  
  '''
# ---
# name: test_doc_ok[doc_limit_offset][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> ORDER BY item
  |> LIMIT 1 OFFSET 2;
  '''
# ---
# name: test_doc_ok[doc_limit_offset][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_order_by
      order_by_items
        order_by_item
          ident	item
    pipe_limit
      limit_expr
        integer_literal	1
      offset_expr
        integer_literal	2
  
  '''
# ---
# name: test_doc_ok[doc_order_by][sql]
  '''
  SELECT 1 AS x
  |> UNION ALL (SELECT 3 AS x)
  |> UNION ALL (SELECT 2 AS x)
  |> ORDER BY x DESC;
  '''
# ---
# name: test_doc_ok[doc_order_by][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	3
                    as_alias
                      ident	x
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	x
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
          order_by_item_sort	DESC
  
  '''
# ---
# name: test_doc_ok[doc_pivot][sql]
  '''
  SELECT "kale" AS product, 51 AS sales, "Q1" AS quarter
  |> UNION ALL (SELECT "kale" AS product, 4 AS sales, "Q1" AS quarter)
  |> UNION ALL (SELECT "kale" AS product, 45 AS sales, "Q2" AS quarter)
  |> UNION ALL (SELECT "apple" AS product, 8 AS sales, "Q1" AS quarter)
  |> UNION ALL (SELECT "apple" AS product, 10 AS sales, "Q2" AS quarter)
  |> PIVOT(SUM(sales) FOR quarter IN ('Q1', 'Q2'));
  '''
# ---
# name: test_doc_ok[doc_pivot][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	"kale"
          as_alias
            ident	product
        select_expr
          integer_literal	51
          as_alias
            ident	sales
        select_expr
          string_literal	"Q1"
          as_alias
            ident	quarter
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	"kale"
                    as_alias
                      ident	product
                  select_expr
                    integer_literal	4
                    as_alias
                      ident	sales
                  select_expr
                    string_literal	"Q1"
                    as_alias
                      ident	quarter
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	"kale"
                    as_alias
                      ident	product
                  select_expr
                    integer_literal	45
                    as_alias
                      ident	sales
                  select_expr
                    string_literal	"Q2"
                    as_alias
                      ident	quarter
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	"apple"
                    as_alias
                      ident	product
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
                  select_expr
                    string_literal	"Q1"
                    as_alias
                      ident	quarter
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	"apple"
                    as_alias
                      ident	product
                  select_expr
                    integer_literal	10
                    as_alias
                      ident	sales
                  select_expr
                    string_literal	"Q2"
                    as_alias
                      ident	quarter
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	sales
        path_expression
          ident	quarter
        pivot_value_list
          pivot_value_list
            pivot_value_item
              string_literal	'Q1'
          pivot_value_item
            string_literal	'Q2'
  
  '''
# ---
# name: test_doc_ok[doc_query_comparison][sql]
  '''
  FROM Produce
  |> WHERE
      item != 'bananas'
      AND category IN ('fruit', 'nut')
  |> AGGREGATE COUNT(*) AS num_items, SUM(sales) AS total_sales
      GROUP BY item
  |> ORDER BY item DESC;
  '''
# ---
# name: test_doc_ok[doc_query_comparison][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	Produce
    pipe_where
      and_expr
        ne_expr
          ident	item
          string_literal	'bananas'
        in_expr
          ident	category
          parenthesized_list
            string_literal	'fruit'
            string_literal	'nut'
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	COUNT
                function_args
                  star_arg
              as_alias
                ident	num_items
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	sales
              as_alias
                ident	total_sales
      group_by
        grouping_items
          grouping_item
            ident	item
    pipe_order_by
      order_by_items
        order_by_item
          ident	item
          order_by_item_sort	DESC
  
  '''
# ---
# name: test_doc_ok[doc_rename][sql]
  '''
  SELECT 1 AS x, 2 AS y, 3 AS z
  |> AS t
  |> RENAME y AS renamed_y
  |> SELECT *, t.y AS t_y;
  '''
# ---
# name: test_doc_ok[doc_rename][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
        select_expr
          integer_literal	2
          as_alias
            ident	y
        select_expr
          integer_literal	3
          as_alias
            ident	z
    pipe_as
      ident	t
    pipe_rename
      rename_list
        rename_item
          ident	y
          as_alias
            ident	renamed_y
    pipe_select
      select_list
        select_star
        select_expr
          path_expression
            ident	t
            ident	y
          as_alias
            ident	t_y
  
  '''
# ---
# name: test_doc_ok[doc_select][sql]
  '''
  FROM (SELECT 'apples' AS item, 2 AS sales)
  |> SELECT item AS fruit_name;
  '''
# ---
# name: test_doc_ok[doc_select][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'apples'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	sales
    pipe_select
      select_list
        select_expr
          ident	item
          as_alias
            ident	fruit_name
  
  '''
# ---
# name: test_doc_ok[doc_set][sql]
  '''
  SELECT 1 AS x, 11 AS y
  |> UNION ALL (SELECT 2 AS x, 22 AS y)
  |> SET x = x * x, y = 3;
  '''
# ---
# name: test_doc_ok[doc_set][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
        select_expr
          integer_literal	11
          as_alias
            ident	y
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	x
                  select_expr
                    integer_literal	22
                    as_alias
                      ident	y
    pipe_set
      set_list
        set_item
          ident	x
          mul_expr
            ident	x
            ident	x
        set_item
          ident	y
          integer_literal	3
  
  '''
# ---
# name: test_doc_ok[doc_set_nested][sql]
  '''
  FROM (SELECT 2 AS x, 3 AS y) AS t
  |> SET x = x * x, y = 8
  |> SELECT t.x AS original_x, x, y;
  '''
# ---
# name: test_doc_ok[doc_set_nested][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	x
                  select_expr
                    integer_literal	3
                    as_alias
                      ident	y
          as_alias
            ident	t
    pipe_set
      set_list
        set_item
          ident	x
          mul_expr
            ident	x
            ident	x
        set_item
          ident	y
          integer_literal	8
    pipe_select
      select_list
        select_expr
          path_expression
            ident	t
            ident	x
          as_alias
            ident	original_x
        select_expr
          ident	x
        select_expr
          ident	y
  
  '''
# ---
# name: test_doc_ok[doc_tablesample][sql]
  '''
  FROM LargeTable
  |> TABLESAMPLE SYSTEM (1 PERCENT);
  '''
# ---
# name: test_doc_ok[doc_tablesample][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	LargeTable
    pipe_tablesample
      tablesample_perc
        integer_literal	1
  
  '''
# ---
# name: test_doc_ok[doc_union_all][sql]
  '''
  SELECT * FROM UNNEST(ARRAY<INT64>[1, 2, 3]) AS number
  |> UNION ALL (SELECT 1);
  '''
# ---
# name: test_doc_ok[doc_union_all][tree]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              array_literal_prefix
                array_type
                  type
                    type_name
                      path_expression
                        ident	INT64
              integer_literal	1
              integer_literal	2
              integer_literal	3
          as_alias
            ident	number
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
  
  '''
# ---
# name: test_doc_ok[doc_union_all_by_name][sql]
  '''
  SELECT 1 AS one_digit, 10 AS two_digit
  |> UNION ALL BY NAME
      (SELECT 20 AS two_digit, 2 AS one_digit);
  '''
# ---
# name: test_doc_ok[doc_union_all_by_name][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	one_digit
        select_expr
          integer_literal	10
          as_alias
            ident	two_digit
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	20
                    as_alias
                      ident	two_digit
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	one_digit
  
  '''
# ---
# name: test_doc_ok[doc_union_all_not_by_name][sql]
  '''
  SELECT 1 AS one_digit, 10 AS two_digit
  |> UNION ALL
      (SELECT 20 AS two_digit, 2 AS one_digit);
  '''
# ---
# name: test_doc_ok[doc_union_all_not_by_name][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	one_digit
        select_expr
          integer_literal	10
          as_alias
            ident	two_digit
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	20
                    as_alias
                      ident	two_digit
                  select_expr
                    integer_literal	2
                    as_alias
                      ident	one_digit
  
  '''
# ---
# name: test_doc_ok[doc_union_distinct_multi][sql]
  '''
  SELECT * FROM UNNEST(ARRAY<INT64>[1, 2, 3]) AS number
  |> UNION DISTINCT
      (SELECT 1),
      (SELECT 2);
  '''
# ---
# name: test_doc_ok[doc_union_distinct_multi][tree]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              array_literal_prefix
                array_type
                  type
                    type_name
                      path_expression
                        ident	INT64
              integer_literal	1
              integer_literal	2
              integer_literal	3
          as_alias
            ident	number
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	DISTINCT
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_doc_ok[doc_union_distinct_single][sql]
  '''
  SELECT * FROM UNNEST(ARRAY<INT64>[1, 2, 3]) AS number
  |> UNION DISTINCT (SELECT 1);
  '''
# ---
# name: test_doc_ok[doc_union_distinct_single][tree]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              array_literal_prefix
                array_type
                  type
                    type_name
                      path_expression
                        ident	INT64
              integer_literal	1
              integer_literal	2
              integer_literal	3
          as_alias
            ident	number
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	DISTINCT
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
  
  '''
# ---
# name: test_doc_ok[doc_unpivot][sql]
  '''
  SELECT 'kale' as product, 55 AS Q1, 45 AS Q2
  |> UNION ALL (SELECT 'apple', 8, 10)
  |> UNPIVOT(sales FOR quarter IN (Q1, Q2));
  '''
# ---
# name: test_doc_ok[doc_unpivot][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'kale'
          as_alias
            ident	product
        select_expr
          integer_literal	55
          as_alias
            ident	Q1
        select_expr
          integer_literal	45
          as_alias
            ident	Q2
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'apple'
                  select_expr
                    integer_literal	8
                  select_expr
                    integer_literal	10
    pipe_unpivot
      unpivot_clause
        unpivot_values_column
          ident	sales
        unpivot_name_column
          ident	quarter
        unpivot_column_list
          ident	Q1
          ident	Q2
  
  '''
# ---
# name: test_doc_ok[doc_where][sql]
  '''
  SELECT 'apples' AS item, 2 AS sales
  |> UNION ALL (SELECT 'bananas' AS item, 5 AS sales)
  |> UNION ALL (SELECT 'carrots' AS item, 8 AS sales)
  |> WHERE sales >= 3;
  '''
# ---
# name: test_doc_ok[doc_where][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'apples'
          as_alias
            ident	item
        select_expr
          integer_literal	2
          as_alias
            ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'bananas'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	5
                    as_alias
                      ident	sales
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    string_literal	'carrots'
                    as_alias
                      ident	item
                  select_expr
                    integer_literal	8
                    as_alias
                      ident	sales
    pipe_where
      gte_expr
        ident	sales
        integer_literal	3
  
  '''
# ---
